--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "car_rent",
   "version": "0.1.0",
+  "homepage": "https://maxvol123.github.io/CarBuild",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
